--- a/.github/workflows/autopush.yml
+++ b/.github/workflows/autopush.yml
@@ -17,5 +17,5 @@ jobs:
             UID: ${{secrets.UID}}
             UPW: ${{secrets.UPW}}
             TOKEN: ${{secrets.TOKEN}}
-        run: bash ./script.sh $UID $UPW $TOKEN
+        run: bash ./autopush.sh $UID $UPW $TOKEN
      
